--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1221,3 +1221,11 @@ WordPress plugin ecwid-shopping-cart:
     cve: 'OVE-20160803-0002 https://sumofpwn.nl/advisory/2016/ecwid_ecommerce_shopping_cart_wordpress_plugin_unauthenticated_php_object_injection_vulnerability.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin store-locator-le:
+  1:
+    location: ['/wp-content/plugins/store-locator-le/readme.txt']
+    secure_version: '4.5.12'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0025 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_store_locator_plus_for_wordpress.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
