--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - '2.6'
   - '2.7'
-install: 'pip install -r requirements.lst --use-mirrors'
+install: 'pip install -r requirements.lst'
 before_script: "sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm"
 script: python tests.py
 notifications:
