--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -152,6 +152,6 @@ phpMyAdmin:
     location: ['/libraries/Config.class.php']
     secure_version: '4.6.4'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://www.phpmyadmin.net/security/PMASA-2016-29/ → https://www.phpmyadmin.net/security/PMASA-2016-56/'
+    cve: 'https://www.phpmyadmin.net/security/PMASA-2016-29/ - https://www.phpmyadmin.net/security/PMASA-2016-56/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
