--- a/yamls/atutor.yml
+++ b/yamls/atutor.yml
@@ -9,6 +9,7 @@
 # CVE-2015-8471 http://seclists.org/bugtraq/2015/Dec/10 https://bitguard.wordpress.com/2015/12/05/atutor-2-2-sqli-vulnerability/
 # CVE-XXXX-XXXX 2.2.1 http://seclists.org/fulldisclosure/2016/Feb/17
 # CVE-XXXX-XXXX 2.2.2 http://www.openwall.com/lists/oss-security/2016/07/01/3 http://www.atutor.ca/atutor/mantis/view.php?id=5681
+# CVE-XXXX-XXXX 2.2.2 https://www.htbridge.com/advisory/HTB23297
 ATutor:
   1:
     location: ['/include/lib/constants.inc.php']
