--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1242,6 +1242,6 @@ WordPress plugin gallery-by-supsystic:
     location: ['/wp-content/plugins/gallery-by-supsystic/readme.txt']
     secure_version: '1.8.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160722-0001 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_adding_of_images.html'
+    cve: 'OVE-20160722-0001 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_adding_of_images.html OVE-20160722-0002 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_deleting_of_images.html OVE-20160722-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_deleting_of_galleries.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
