Added support for WordPress plugin google-maps

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1248,3 +1248,11 @@ WordPress plugin gallery-by-supsystic:
     cve: 'OVE-20160722-0001 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_adding_of_images.html OVE-20160722-0002 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_deleting_of_images.html OVE-20160722-0003 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_photo_gallery_wordpress_plugin_allows_deleting_of_galleries.html OVE-20160722-0004 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_photo_gallery_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin google-maps:
+  1:
+    location: ['/wp-content/plugins/google-maps/readme.txt']
+    secure_version: '2.1.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0038 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_google_maps_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
