--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1265,3 +1265,11 @@ WordPress plugin peters-login-redirect:
     cve: 'OVE-20160724-0028 https://sumofpwn.nl/advisory/2016/cross_site_scripting_cross_site_request_forgery_in_peter_s_login_redirect_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin ajax-load-more:
+  1:
+    location: ['/wp-content/plugins/ajax-load-more/readme.txt']
+    secure_version: '2.11.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0034 https://sumofpwn.nl/advisory/2016/ajax_load_more_local_file_inclusion_vulnerability.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
