--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1281,3 +1281,11 @@ WordPress plugin link-library:
     cve: 'OVE-20160724-0016 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_link_library_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-maintenance-mode:
+  1:
+    location: ['/wp-content/plugins/wp-maintenance-mode/readme.txt']
+    secure_version: '2.0.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2016/07/3-vulnerabilities-wp-maintenance-mode/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
