--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -56,12 +56,13 @@
 # https://drupal.org/SA-CORE-2016-002   CVE-2016-6211   8.1.3/7.44
 # https://drupal.org/SA-CORE-2016-002   CVE-2016-6212   8.1.3/7.44
 # https://drupal.org/SA-CORE-2016-003   CVE-2016-5385   8.1.7
+# https://drupal.org/SA-CORE-2016-004                   8.1.10
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.1.7'
+    secure_version: '8.1.10'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2016-003 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5385'
+    cve: 'https://drupal.org/SA-CORE-2016-004'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
