--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1306,12 +1306,13 @@ WordPress plugin xdata-toolkit:
     cve: 'https://www.pluginvulnerabilities.com/2016/06/15/arbitrary-file-upload-vulnerability-in-xdata-toolkit/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 2.4.1 fixed security issues but is still vulnerable
 WordPress plugin wpmarketplace:
   1:
     location: ['/wp-content/plugins/wpmarketplace/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://labs.sucuri.net/?note=2016-10-17'
+    cve: 'http://labs.sucuri.net/?note=2016-10-17 https://www.pluginvulnerabilities.com/2016/10/14/arbitrary-file-upload-vulnerability-in-wp-marketplace/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin download-manager:
