--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -117,7 +117,7 @@ Joomla 3:
     location: ['/administrator/manifests/files/joomla.xml']
     secure_version: '3.6.4'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-8869 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-8870 https://www.joomla.org/announcements/release-news/5678-joomla-3-6-4-released.html'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-8869 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-8870 https://www.joomla.org/announcements/release-news/5678-joomla-3-6-4-released.html https://blog.sucuri.net/2016/10/details-on-the-privilege-escalation-vulnerability-in-joomla.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
