--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1323,3 +1323,11 @@ WordPress plugin download-manager:
     cve: 'https://www.pluginvulnerabilities.com/2016/06/27/authenticated-arbitrary-file-upload-vulnerability-in-wordpress-download-manager/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contus-video-comments:
+  1:
+    location: ['/wp-content/plugins/contus-video-comments/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000112 http://www.vapidlabs.com/advisory.php?v=163'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
