--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1331,3 +1331,11 @@ WordPress plugin contus-video-comments:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000112 http://www.vapidlabs.com/advisory.php?v=163'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin candidate-application-form:
+  1:
+    location: ['/wp-content/plugins/candidate-application-form/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000005 http://www.vapidlabs.com/advisory.php?v=142'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
