--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1347,3 +1347,11 @@ WordPress plugin mailcwp:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000000 http://www.vapidlabs.com/advisory.php?v=138'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin fast-image-adder:
+  1:
+    location: ['/wp-content/plugins/fast-image-adder/readme.txt']
+    secure_version: 'N/A'  # v1.1 is vulnerable
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000001 http://www.vapidlabs.com/advisory.php?v=139'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
