--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1390,8 +1390,16 @@ WordPress plugin mp3-jplayer:
 WordPress plugin google-adsense-and-hotel-booking:
   1:
     location: ['/wp-content/plugins/google-adsense-and-hotel-booking/readme.txt']
-    secure_version: 'N/A'  # v1.05 s vulnerable
+    secure_version: 'N/A'  # v1.05 is vulnerable
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000009 http://www.vapidlabs.com/advisory.php?v=151'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin simple-image-manipulator:
+  1:
+    location: ['/wp-content/plugins/simple-image-manipulator/readme.txt']
+    secure_version: 'N/A'  # v1.0 is vulnerable
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000010 http://www.vapidlabs.com/advisory.php?v=144'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
