--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1411,3 +1411,11 @@ WordPress plugin mypixs:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000012 http://www.vapidlabs.com/advisory.php?v=154'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin csv2wpec-coupon:
+  1:
+    location: ['/wp-content/plugins/csv2wpec-coupon/readme.txt']
+    secure_version: 'N/A'  # v1.1 is vulnerable
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000013 http://www.vapidlabs.com/advisory.php?v=153'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
