--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -251,7 +251,7 @@ WordPress plugin subscribe-to-comments:
     location: ['/wp-content/plugins/subscribe-to-comments/readme.txt']
     secure_version: '2.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/fulldisclosure/2015/Jul/71'
+    cve: 'https://security.dxw.com/advisories/admin-only-local-file-inclusion-and-arbitrary-code-execution-in-subscribe-to-comments-2-1-2/ http://seclists.org/fulldisclosure/2015/Jul/71'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin cp-contact-form-with-paypal:
