--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -219,7 +219,7 @@ WordPress plugin easy2map-photos:
     location: ['/wp-content/plugins/easy2map-photos/readme.txt']
     secure_version: '1.1.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=2015-4615 https://web.nvd.nist.gov/view/vuln/detail?vulnId=2015-4617'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=2015-4615 https://web.nvd.nist.gov/view/vuln/detail?vulnId=2015-4617 http://www.vapidlabs.com/advisory.php?v=130'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin ibs-mappro:
