--- a/yamls/piwik.yml
+++ b/yamls/piwik.yml
@@ -13,12 +13,12 @@
 # CVE-2013-2633 1.11    http://piwik.org/blog/2013/03/piwik-1-11/
 # CVE-2015-7815 2.15.0  https://piwik.org/changelog/piwik-2-15-0 http://karmainsecurity.com/KIS-2015-09
 # CVE-2015-7816 2.15.0  https://piwik.org/changelog/piwik-2-15-0 http://karmainsecurity.com/KIS-2015-10
-# TODO: pending 2.16.1  http://karmainsecurity.com/KIS-2016-13
+# TODO: pending 2.16.1  https://piwik.org/changelog/piwik-2-16-1/ http://karmainsecurity.com/KIS-2016-13
 Piwik:
   1:
     location: ['/core/Version.php']
     secure_version: '2.16.1'
     regexp: ["    const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'http://karmainsecurity.com/KIS-2016-13'
+    cve: 'https://piwik.org/changelog/piwik-2-16-1/ http://karmainsecurity.com/KIS-2016-13'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
