--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -1,35 +1,35 @@
-# URL: http://www.mybb.com/downloads
+# URL: https://mybb.com/downloads
 # CVE-2010-4522
-# CVE-2010-4624         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
-# CVE-2010-4625         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
-# CVE-2010-4626         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
-# CVE-2010-4627         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4624         https://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4625         https://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4626         https://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4627         https://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
 # CVE-2010-4628
 # CVE-2010-4629
-# CVE-2009-4448         http://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
-# CVE-2009-4449         http://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
-# CVE-2010-5096 1.6.1   http://yehg.net/lab/pr0js/advisories/%5Bmybb1.6%5D_sql_injection
+# CVE-2009-4448         https://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
+# CVE-2009-4449         https://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
+# CVE-2010-5096 1.6.1   https://yehg.net/lab/pr0js/advisories/%5Bmybb1.6%5D_sql_injection
 # CVE-2012-2324 1.6.7
-# CVE-2012-2325         http://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
-# CVE-2012-2326         http://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
-# CVE-2012-2327         http://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
+# CVE-2012-2325         https://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
+# CVE-2012-2326         https://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
+# CVE-2012-2327         https://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
 # CVE-2012-5908 N/A
 # CVE-2012-5909 N/A
-# CVE-2013-7288 1.6.12  http://blog.mybb.com/2013/12/16/mybb-1-6-12-released-security-maintenance-release/
+# CVE-2013-7288 1.6.12  https://blog.mybb.com/2013/12/16/mybb-1-6-12-released-security-maintenance-release/
 # CVE-2013-7275 1.6.12
-# CVE-2014-1840 1.6.13  http://blog.mybb.com/2014/04/25/mybb-1-6-13-released-security-maintenance-release/
-# CVE-2014-XXXX 1.6.14  http://blog.mybb.com/2014/06/30/mybb-1-6-14-released-security-maintenance-release/
-# CVE-2014-5248 1.6.15  http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
+# CVE-2014-1840 1.6.13  https://blog.mybb.com/2014/04/25/mybb-1-6-13-released-security-maintenance-release/
+# CVE-2014-XXXX 1.6.14  https://blog.mybb.com/2014/06/30/mybb-1-6-14-released-security-maintenance-release/
+# CVE-2014-5248 1.6.15  https://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
 # CVE-2014-9240 1.8.2
 # CVE-2014-9241 1.8.2
-# CVE-2014-XXXX 1.8.3   http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/ CVE requested http://www.openwall.com/lists/oss-security/2014/12/10/14
-# CVE-2015-2149 1.8.4   http://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/ http://www.openwall.com/lists/oss-security/2015/02/21/4
+# CVE-2014-XXXX 1.8.3   https://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/ CVE requested http://www.openwall.com/lists/oss-security/2014/12/10/14
+# CVE-2015-2149 1.8.4   https://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/ http://www.openwall.com/lists/oss-security/2015/02/21/4
 # CVE-2015-2332 1.8.4
 # CVE-2015-2333 1.8.4
 # CVE-2015-2334 1.8.4
 # CVE-2015-2335 1.8.4
 # CVE-2015-2352 1.8.4
-# CVE-2015-4552 1.8.5   http://blog.mybb.com/2015/05/27/mybb-1-8-5-1-6-17-merge-system-1-8-5-release/
+# CVE-2015-4552 1.8.5   https://blog.mybb.com/2015/05/27/mybb-1-8-5-1-6-17-merge-system-1-8-5-release/
 # TODO          1.8.6   https://blog.mybb.com/2015/09/07/mybb-1-8-6-1-6-18-merge-system-1-8-6-release/
 # TODO          1.8.7   https://blog.mybb.com/2016/03/11/mybb-1-8-7-merge-system-1-8-7-release/ https://www.curesec.com/blog/article/blog/MyBB-186-XSS-160.html
 # TODO          1.8.8   https://blog.mybb.com/2016/10/17/mybb-1-8-8-merge-system-1-8-8-release/
