--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1471,3 +1471,11 @@ WordPress plugin wp-google-maps:
     cve: 'OVE-20160724-0007 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wp_google_maps_plugin_via_csrf.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin content-slide:
+  1:
+    location: ['/wp-content/plugins/content-slide/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-2708 https://security.dxw.com/advisories/csrf-and-stored-xss-in-wordpress-content-slide-allow-an-attacker-to-have-full-admin-privileges/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
