PMASA-2016-44 page is still missing

--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -134,7 +134,7 @@
 # PMASA-2016-41 CVE-2016-6618   4.6.4/4.4.15.8/4.0.10.17
 # PMASA-2016-42 CVE-2016-6619   4.6.4/4.4.15.8/4.0.10.17
 # PMASA-2016-43 CVE-2016-6620   4.6.4/4.4.15.8/4.0.10.17
-# PMASA-2016-44 CVE-2016-6621   Page missing 2016-08-28 TODO
+# PMASA-2016-44 CVE-2016-6621   Page missing 2016-08-28 TODO https://github.com/phpmyadmin/phpmyadmin/issues/12481
 # PMASA-2016-45 CVE-2016-6622   4.6.4/4.4.15.8/4.0.10.17
 # PMASA-2016-46 CVE-2016-6623   4.6.4/4.4.15.8/4.0.10.17
 # PMASA-2016-47 CVE-2016-6624   4.6.4/4.4.15.8/4.0.10.17
