--- a/yamls/phpbb3.yml
+++ b/yamls/phpbb3.yml
@@ -1,8 +1,8 @@
-# CVE-2005-2086 2.0.16      http://osvdb.org/17613
+# CVE-2005-2086 2.0.16
 # CVE-2008-1766 3.0.1       SA29801
 # CVE-2008-6506 3.0.4       SA33166
 # CVE-2008-6507 3.0.4       SA33166
-# CVE-2008-7143             http://osvdb.org/51121
+# CVE-2008-7143
 # CVE-2010-1627 3.0.7PL1    SA38837
 # CVE-2010-1630 3.0.5       SA38264
 # CVE-2011-0544 3.0.8       SA42343
