--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1514,3 +1514,11 @@ WordPress plugin answer-my-question:
     cve: 'http://seclists.org/bugtraq/2011/Mar/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin bp-code-snippets:
+  1:
+    location: ['/wp-content/plugins/bp-code-snippets/readme.txt']
+    secure_version: '2.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-1808 http://www.openwall.com/lists/oss-security/2013/03/26/8'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
