--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1130,12 +1130,13 @@ WordPress plugin aryo-activity-log:
     cve: 'OVE-20160712-0037 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wordpress_activity_log_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# OVE-20160719-0001 4.1.3 https://sumofpwn.nl/advisory/2016/multiple_vulnerabilities_in_all_in_one_wp_security___firewall_plugin_login_captcha.html
 WordPress plugin all-in-one-wp-security-and-firewall:
   1:
     location: ['/wp-content/plugins/all-in-one-wp-security-and-firewall/readme.txt']
-    secure_version: '4.1.3'
+    secure_version: '4.2.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160719-0001 https://sumofpwn.nl/advisory/2016/multiple_vulnerabilities_in_all_in_one_wp_security___firewall_plugin_login_captcha.html'
+    cve: 'OVE-20160731-0003 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_all_in_one_wp_security___firewall_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin easy-testimonials:
