--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1563,3 +1563,11 @@ WordPress plugin question-and-answer-forum:
     cve: 'https://www.htbridge.com/advisory/HTB22861'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin admin-font-editor:
+  1:
+    location: ['/wp-content/plugins/admin-font-editor/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=526'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
