--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1571,3 +1571,11 @@ WordPress plugin admin-font-editor:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000126 http://www.vapidlabs.com/wp/wp_advisory.php?v=526'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin ajax-random-post:
+  1:
+    location: ['/wp-content/plugins/ajax-random-post/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000127 http://www.vapidlabs.com/wp/wp_advisory.php?v=494'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
