--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1579,3 +1579,11 @@ WordPress plugin ajax-random-post:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000127 http://www.vapidlabs.com/wp/wp_advisory.php?v=494'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin anti-plagiarism:
+  1:
+    location: ['/wp-content/plugins/anti-plagiarism/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000128 http://www.vapidlabs.com/wp/wp_advisory.php?v=161'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
