--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1587,3 +1587,11 @@ WordPress plugin anti-plagiarism:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000128 http://www.vapidlabs.com/wp/wp_advisory.php?v=161'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin defa-online-image-protector:
+  1:
+    location: ['/wp-content/plugins/defa-online-image-protector/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000129 http://www.vapidlabs.com/wp/wp_advisory.php?v=449'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
