--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1595,3 +1595,11 @@ WordPress plugin defa-online-image-protector:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000129 http://www.vapidlabs.com/wp/wp_advisory.php?v=449'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin e-search:
+  1:
+    location: ['/wp-content/plugins/e-search/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000130 http://www.vapidlabs.com/wp/wp_advisory.php?v=394'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
