--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1603,3 +1603,11 @@ WordPress plugin e-search:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000130 http://www.vapidlabs.com/wp/wp_advisory.php?v=394 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000131 http://www.vapidlabs.com/wp/wp_advisory.php?v=393'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin forget-about-shortcode-buttons:
+  1:
+    location: ['/wp-content/plugins/forget-about-shortcode-buttons/readme.txt']
+    secure_version: '1.1.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000133 http://www.vapidlabs.com/wp/wp_advisory.php?v=602'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
