--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1611,3 +1611,11 @@ WordPress plugin forget-about-shortcode-buttons:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000133 http://www.vapidlabs.com/wp/wp_advisory.php?v=602'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin hdw-tube:
+  1:
+    location: ['/wp-content/plugins/hdw-tube/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000134 http://www.vapidlabs.com/wp/wp_advisory.php?v=530'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
