--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1619,3 +1619,11 @@ WordPress plugin hdw-tube:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000134 http://www.vapidlabs.com/wp/wp_advisory.php?v=530 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000135 http://www.vapidlabs.com/wp/wp_advisory.php?v=533'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin heat-trackr:
+  1:
+    location: ['/wp-content/plugins/heat-trackr/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000136 http://www.vapidlabs.com/wp/wp_advisory.php?v=798'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
