--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1627,3 +1627,11 @@ WordPress plugin heat-trackr:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000136 http://www.vapidlabs.com/wp/wp_advisory.php?v=798'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin hero-maps-pro:
+  1:
+    location: ['/wp-content/plugins/hero-maps-pro/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000137 http://www.vapidlabs.com/wp/wp_advisory.php?v=658'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
