--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1635,3 +1635,11 @@ WordPress plugin hero-maps-pro:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000137 http://www.vapidlabs.com/wp/wp_advisory.php?v=658'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin indexisto:
+  1:
+    location: ['/wp-content/plugins/indexisto/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000138 http://www.vapidlabs.com/wp/wp_advisory.php?v=38'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
