--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1643,3 +1643,11 @@ WordPress plugin indexisto:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000138 http://www.vapidlabs.com/wp/wp_advisory.php?v=38'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin infusionsoft:
+  1:
+    location: ['/wp-content/plugins/infusionsoft/readme.txt']
+    secure_version: '1.5.12'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000139 http://www.vapidlabs.com/wp/wp_advisory.php?v=864'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
