--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1651,3 +1651,11 @@ WordPress plugin infusionsoft:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000139 http://www.vapidlabs.com/wp/wp_advisory.php?v=864'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin new-year-firework:
+  1:
+    location: ['/wp-content/plugins/new-year-firework/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000140 http://www.vapidlabs.com/wp/wp_advisory.php?v=453'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
