--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1659,3 +1659,11 @@ WordPress plugin new-year-firework:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000140 http://www.vapidlabs.com/wp/wp_advisory.php?v=453'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin page-layout-builder:
+  1:
+    location: ['/wp-content/plugins/page-layout-builder/readme.txt']
+    secure_version: '2.0.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000141 http://www.vapidlabs.com/wp/wp_advisory.php?v=358'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
