--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1667,3 +1667,11 @@ WordPress plugin page-layout-builder:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000141 http://www.vapidlabs.com/wp/wp_advisory.php?v=358'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin parsi-font:
+  1:
+    location: ['/wp-content/plugins/parsi-font/readme.txt']
+    secure_version: '4.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000142 http://www.vapidlabs.com/wp/wp_advisory.php?v=435'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
