--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1675,3 +1675,11 @@ WordPress plugin parsi-font:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000142 http://www.vapidlabs.com/wp/wp_advisory.php?v=435'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin photoxhibit:
+  1:
+    location: ['/wp-content/plugins/photoxhibit/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000143 http://www.vapidlabs.com/wp/wp_advisory.php?v=780'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
