--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1683,3 +1683,11 @@ WordPress plugin photoxhibit:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000143 http://www.vapidlabs.com/wp/wp_advisory.php?v=780 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000144 http://www.vapidlabs.com/wp/wp_advisory.php?v=778'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin pondol-formmail:
+  1:
+    location: ['/wp-content/plugins/pondol-formmail/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000146 http://www.vapidlabs.com/wp/wp_advisory.php?v=787'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
