--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1691,3 +1691,11 @@ WordPress plugin pondol-formmail:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000146 http://www.vapidlabs.com/wp/wp_advisory.php?v=787'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin recipes-writer:
+  1:
+    location: ['/wp-content/plugins/recipes-writer/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000147 http://www.vapidlabs.com/wp/wp_advisory.php?v=380'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
