--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1699,3 +1699,11 @@ WordPress plugin recipes-writer:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000147 http://www.vapidlabs.com/wp/wp_advisory.php?v=380'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin s3-video:
+  1:
+    location: ['/wp-content/plugins/s3-video/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000148 http://www.vapidlabs.com/wp/wp_advisory.php?v=240'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
