--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1707,3 +1707,11 @@ WordPress plugin s3-video:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000148 http://www.vapidlabs.com/wp/wp_advisory.php?v=240'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin simpel-reserveren:
+  1:
+    location: ['/wp-content/plugins/simpel-reserveren/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000149 http://www.vapidlabs.com/wp/wp_advisory.php?v=474'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
