--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1715,3 +1715,11 @@ WordPress plugin simpel-reserveren:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000149 http://www.vapidlabs.com/wp/wp_advisory.php?v=474'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin simplified-content:
+  1:
+    location: ['/wp-content/plugins/simplified-content/readme.txt']
+    secure_version: '1.0.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000150 http://www.vapidlabs.com/wp/wp_advisory.php?v=853'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
