--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1723,3 +1723,11 @@ WordPress plugin simplified-content:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000150 http://www.vapidlabs.com/wp/wp_advisory.php?v=853'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin tidio-form:
+  1:
+    location: ['/wp-content/plugins/tidio-form/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000152 http://www.vapidlabs.com/wp/wp_advisory.php?v=799'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
