--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1731,3 +1731,11 @@ WordPress plugin tidio-form:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000152 http://www.vapidlabs.com/wp/wp_advisory.php?v=799'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin tidio-gallery:
+  1:
+    location: ['/wp-content/plugins/tidio-gallery/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000153 http://www.vapidlabs.com/wp/wp_advisory.php?v=427'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
