--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1747,3 +1747,11 @@ WordPress plugin whizz:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000154 http://www.vapidlabs.com/wp/wp_advisory.php?v=112'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wpsolr-search-engine:
+  1:
+    location: ['/wp-content/plugins/wpsolr-search-engine/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000155 http://www.vapidlabs.com/wp/wp_advisory.php?v=303'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
