--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1755,3 +1755,11 @@ WordPress plugin wpsolr-search-engine:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000155 http://www.vapidlabs.com/wp/wp_advisory.php?v=303'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin advanced-dewplayer:
+  1:
+    location: ['/wp-content/plugins/advanced-dewplayer/readme.txt']
+    secure_version: '1.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-7240'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
