--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1763,3 +1763,11 @@ WordPress plugin advanced-dewplayer:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-7240'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wc-shortcodes:
+  1:
+    location: ['/wp-content/plugins/wc-shortcodes/readme.txt']
+    secure_version: '2.07'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0031 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_in_wp_canvas___shortcodes_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
